feat: better admin features
